<resources>

    <string name="app_name">Verifire Sample</string>

    <!-- Will be better to receive this key from server or firebase.RemoteConfig -->
    <string name="verifire_key">600d8f95c588208f05fc725b35258a69:b958b74fd2ab23fc09acae757180d464:b1e2213eb35b82260285904d5bfb0637</string>

    <string name="phone_number_hint">Enter phone number</string>
    <string name="verify_by_call">Verify by Call</string>
    <string name="verify_by_sms">Verify by SMS</string>
    <string name="verify_by_voice">Verify by Voice</string>
    <string name="check_btn">Check code</string>
    <string name="verification_completed">Verification completed for %1$s</string>

    <string name="error_connection">Connection error. Please try again.</string>
    <string name="error_wrong_code">Wrong code. Please try again</string>
    <string name="error_wrong_number">Please enter a valid mobile number</string>

</resources>

