<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.verifire.sample.MainActivity">


    <LinearLayout
        android:id="@+id/enter_phone_dialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:maxLength="16"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/verify_by_call_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verify_by_call"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/verify_by_sms_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verify_by_sms"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/verify_by_voice_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verify_by_voice"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_code_dialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/code_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="xxxx"
            android:inputType="phone"
            android:maxLength="4"
            tools:ignore="HardcodedText"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/check_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/check_btn"
            />
    </LinearLayout>


</RelativeLayout>
